Switched to signal methods to set colors